<resources>
    // App name
    <string name="app_name">COVID-19 STATS</string>

    // StartScreen
    <string name="protect_yourself">Protect Yourself and Others</string>
    <string name="wear_mask">Wear mask</string>
    <string name="wash_hand">Wash hand</string>
    <string name="keep_distance">Keep distance</string>
    <string name="startBtn">Get Started</string>

    // StatsFragment
    <string name="overview">Overview Stats</string>
    <string name="rate_recover">Ratio of Recovery</string>
    <string name="daily_stats">Daily Statistics</string>
    <string name="total_stats">Total Statistics</string>
    <string name="stats">Global Statistics</string>
    <string name="active">Active</string>
    <string name="active_case">Active cases</string>
    <string name="recovered">Recovered</string>
    <string name="total_case">Total cases</string>
    <string name="deaths">Deaths</string>
    <string name="covid_19">Covid-19</string>
    <string name="country">Country</string>
    <string name="cases">Total Cases</string>
    <string name="increment_number">+123456</string>
    <string name="number">0123456789</string>
    <string name="toggle_vietnam">Viet Nam</string>
    <string name="toggle_global">Global </string>

    // AffectedCountry
    <string name="search">Search Country</string>

    // MyCustomAdapter
    <string name="country_name">Country Name</string>

    <string name="open_nav">Open Navigation Drawer</string>
    <string name="close_nav">Close Navigation Drawer</string>


    <string name="settings">SETTINGS</string>
    <string name="user_name">User Name</string>
    <string name="phone_number">phone_number</string>
    <string name="edit_profile">Edit Profile</string>
    <string name="night_mode">Night Mode</string>
    <string name="notifications">Notifications</string>
    <string name="text_size">Text Size</string>
    <string name="language">Language</string>
    <string name="send_us_a_message">Send us a message</string>
    <string name="about_us">About Us</string>
    <string name="log_out">Log Out</string>
    <string name="today_cases">Today Cases</string>
    <string name="Deaths">Deaths</string>
    <string name="today_deaths">Today Deaths</string>
    <string name="Recovered">Recovered</string>
    <string name="active_cases">Active Cases</string>
    <string name="critical_cases">Critical Cases</string>
    <string name="digit_code">Please enter the digit code that we have sent to your</string>
    <string name="email_address">Email Address</string>
    <string name="enter_otp">Enter OTP</string>
    <string name="enter_new_password">Enter New Password</string>
    <string name="verify">Verify</string>
    <string name="report_form">Report Form</string>
    <string name="personal_information">Personal Information</string>
    <string name="firstname">FirstName</string>
    <string name="lastname">LastName</string>
    <string name="date_of_birth">Date of Birth</string>
    <string name="address">Address</string>
    <string name="street_address">Street Address</string>
    <string name="city">City</string>
    <string name="province">Province</string>
    <string name="Country">Country</string>
    <string name="id">ID</string>
    <string name="contact_information">Contact Information</string>
    <string name="email">Email</string>
    <string name="Phone_number">Phone Number</string>
    <string name="symptoms">Symptoms</string>
    <string name="fever_or_chills">Fever or chills</string>
    <string name="shortness_of_breath">Shortness of breath</string>
    <string name="runny_nose">Runny nose</string>
    <string name="fatigue">Fatigue</string>
    <string name="headache">Headache</string>
    <string name="nausea_or_vomiting">Nausea or vomiting</string>
    <string name="muscle_or_body_aches">Muscle or body aches</string>
    <string name="loss_of_taste_or_smell">Loss of taste or smell</string>
    <string name="sore_throat">Sore throat</string>
    <string name="cough">Cough</string>
    <string name="submit">Submit</string>
    <string name="please_enter_your_email_address">Please enter your email address</string>
    <string name="sign_up">Sign Up</string>
    <string name="create_a_new_account">Create a new account</string>
    <string name="full_name">Full Name</string>
    <string name="password">Password</string>
    <string name="confirm_password">Confirm password</string>
    <string name="already_have_an_account">Already have an account ?</string>
    <string name="sign_in">Sign in</string>
    <string name="login">Login</string>
    <string name="forgot_password">Forgot password</string>
    <string name="don_t_have_account">Don\'t have account?</string>
    <string name="help">Help</string>
    <string name="hotline">Hotline</string>
    <string name="hospital">Hospital</string>
    <string name="report_a_case">Report a case</string>
    <string name="close">Close</string>
    <string name="fever_chills">Fever/Chills</string>
    <string name="barely_breath">Barely breath</string>
    <string name="loss_taste">Loss taste</string>
    <string name="body_aches">Body aches</string>
    <string name="headaches">Headaches</string>
    <string name="nausea">Nausea</string>
    <string name="warning">If someone is showing any of these signs, call 911 or call ahead to your local emergency facility. Notify the operator that you are seeking care for someone who has or may have COVID-19.</string>
    <string name="fever">Fever</string>
    <string name="fever_details">A temporary rise in body temperature, often due to an infection. It\'s the body\'s natural response to fight illness, usually above 100.4°F (38°C).</string>
    <string name="nausea_details">A sensation of discomfort in the stomach that often leads to the urge to vomit. It can be caused by various factors, including motion sickness, food poisoning, anxiety, or illness.</string>
    <string name="cough_details">A reflex action to clear the throat or airways of irritants, mucus, or foreign particles. It can be dry (no mucus) or productive (with mucus).</string>
    <string name="barelybreath_details">A feeling of difficulty or discomfort in breathing, often described as an inability to get enough air. It can be caused by exertion, medical conditions, or stress.</string>
    <string name="losstaste_details">The inability to detect flavors (taste) or odors (smell), often caused by infections like colds, flu, or COVID-19, or due to nasal blockages or neurological issues.</string>
    <string name="fatigue_details">A feeling of extreme tiredness or lack of energy, often caused by physical or mental exertion, illness, or lack of sleep. It can be temporary or chronic, depending on the underlying cause.</string>
    <string name="bodyaches_details">Generalized pain or discomfort in the muscles and joints, often caused by infections like the flu, stress, or physical exertion. It can range from mild soreness to more intense pain.</string>
    <string name="headache_details">Pain or discomfort in the head, scalp, or neck. It can range from mild to severe and may be caused by stress, dehydration, tension, or underlying health conditions like migraines.</string>
    <string name="pain_irritation_or_scratchiness_in_the_throat_often_worsened_by_swallowing_it_s_commonly_caused_by_infections_like_colds_or_strep_throat">Pain, irritation, or scratchiness in the throat, often worsened by swallowing. It’s commonly caused by infections like colds or strep throat.</string>
    <string name="the_excess_production_of_mucus_that_drips_or_runs_from_the_nostrils_it_s_often_caused_by_colds_allergies_or_irritants_like_dust_or_smoke">The excess production of mucus that drips or runs from the nostrils. It’s often caused by colds, allergies, or irritants like dust or smoke.</string>
</resources>