<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NewPassword"
    android:orientation="vertical"
    android:background="@color/white">

    <ImageView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:src="@drawable/otp_pic"
        android:adjustViewBounds="true"/>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:text="@string/digit_code"
        android:textColor="#66000000"
        android:layout_marginTop="10dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/email_address"
        android:textColor="#66000000"
        android:textSize="12sp"
        android:layout_marginTop="10dp"/>
    <TextView
        android:id="@+id/otpEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:textColor="#CC000000"
        android:textSize="16sp"
        android:textStyle="bold"
        android:text="test@gmail.com"/>


    <EditText
        android:id="@+id/otp"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/otp"
        android:inputType="number"
        android:maxLines="1"
        android:hint="@string/enter_otp"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp" />

    <EditText
        android:id="@+id/new_password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:background="@drawable/otp"
        android:maxLines="1"
        android:hint="@string/enter_new_password"
        android:padding="10dp"
        android:textColor="#000000"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp" />
    
    <ProgressBar
        android:id="@+id/progress"
        android:visibility="gone"
        android:layout_margin="20dp"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/verifyBtn"
        android:layout_width="match_parent"
        android:layout_height="55dp"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:layout_marginTop="40dp"
        android:background="@drawable/border"
        android:backgroundTint="@color/relative_background"
        android:text="@string/verify"
        android:textColor="@color/white"
        android:textAllCaps="true"/>



</LinearLayout>