<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".SignUp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:orientation="vertical"
        android:gravity="center_horizontal">


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textStyle="bold"
            android:textSize="30dp"
            android:textColor="@color/black"
            android:text="@string/sign_up"
            android:layout_marginTop="20dp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/create_a_new_account"
            android:layout_marginTop="5dp"/>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="50dp"
            android:hint="@string/full_name"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/fullName"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPersonName"
                android:paddingStart="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_person"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>



        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/email"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/email"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textEmailAddress"
                android:paddingStart="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_email"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/Phone_number"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/mobile"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="phone"
                android:paddingStart="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_phone"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/password"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/password"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.textfield.TextInputLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:hint="@string/confirm_password"
            app:boxBackgroundColor="@color/white"
            app:boxCornerRadiusBottomEnd="12dp"
            app:boxCornerRadiusBottomStart="12dp"
            app:boxCornerRadiusTopEnd="12dp"
            app:boxCornerRadiusTopStart="12dp"
            app:endIconMode="password_toggle">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/conPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:inputType="textPassword"
                android:paddingStart="10dp"
                android:maxLines="1"
                android:drawableStart="@drawable/ic_password"
                android:drawablePadding="10dp" />
        </com.google.android.material.textfield.TextInputLayout>

        <!--
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="20dp"
            android:background="@drawable/edit_text_background">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Password"
                app:boxBackgroundMode="none"
                android:layout_toStartOf="@id/passwordIcon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/passwordIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/eyes"
                android:contentDescription="Toggle Password Visibility" />
        </RelativeLayout>
        -->


        <!--<RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:layout_marginStart="20dp"
            android:layout_marginEnd="20dp"
            android:layout_marginTop="22dp"
            android:background="@drawable/edit_text_background">


            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="Confirm Password"
                app:boxBackgroundMode="none"
                android:layout_alignParentStart="true"
                android:layout_toStartOf="@id/conPasswordIcon">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/conPassword"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:inputType="textPassword"
                    android:paddingStart="10dp"
                    android:drawableStart="@drawable/password_icon"
                    android:drawablePadding="10dp" />
            </com.google.android.material.textfield.TextInputLayout>


            <ImageView
                android:id="@+id/conPasswordIcon"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:layout_alignParentEnd="true"
                android:layout_marginEnd="10dp"
                android:src="@drawable/eyes"
                android:contentDescription="Toggle Password Visibility" />
        </RelativeLayout>
        -->





        <TextView
            android:id="@+id/error"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Error while signing up"
            android:layout_marginTop="20dp"
            android:textColor="#F44336"
            android:visibility="gone"/>

        <ProgressBar
            android:id="@+id/loading"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:visibility="gone"/>

        <Button
            android:textSize="20dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:backgroundTint="@color/relative_background"
            android:text="@string/sign_up"
            android:gravity="center"
            android:padding="20dp"
            android:layout_marginStart="30dp"
            android:layout_marginEnd="30dp"
            android:layout_marginTop="20dp"
            android:id="@+id/signUpButton"/>


        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:gravity="center"
            android:layout_marginTop="20dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"

                android:hint="@string/already_have_an_account" />
            <TextView
                android:id="@+id/signIn"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:textSize="20dp"
                android:textColorHint="#4287f5"
                android:hint="@string/sign_in" />
        </LinearLayout>



    </LinearLayout>

</LinearLayout>